[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentreach"
version = "0.3.0"
description = "Persistent authenticated web access for AI agents. Never ask a human to open a browser again."
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Joshua Noreen", email = "josh@tenlifecreatives.com"}
]
keywords = [
    "ai-agents", "automation", "browser-automation", "playwright",
    "kdp", "etsy", "gumroad", "pinterest", "session-management",
    "openclaw", "agent-tools"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Browsers",
]
requires-python = ">=3.10"
dependencies = [
    "playwright>=1.40.0",
    "playwright-stealth>=1.0.6",
    "httpx>=0.25.0",
    "cryptography>=41.0.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-playwright>=0.4",
]
mcp = [
    "mcp>=1.0.0",
]
mcp-dev = [
    "mcp>=1.0.0",
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
agentreach = "agentreach.cli:main"
agentreach-mcp = "agentreach.mcp_server:main"

[project.urls]
Homepage = "https://github.com/tenlifejosh/agentreach"
Repository = "https://github.com/tenlifejosh/agentreach"
Issues = "https://github.com/tenlifejosh/agentreach/issues"
Documentation = "https://github.com/tenlifejosh/agentreach#readme"
Changelog = "https://github.com/tenlifejosh/agentreach/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (browser automation)",
    "integration: marks tests requiring live network",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
omit = [
    "src/agentreach/mcp_server.py",
    "src/agentreach/drivers/etsy.py",
    "src/agentreach/drivers/gumroad.py",
    "src/agentreach/drivers/kdp.py",
    "src/agentreach/drivers/nextdoor.py",
    "src/agentreach/drivers/pinterest.py",
    "src/agentreach/drivers/reddit.py",
    "src/agentreach/drivers/twitter.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = false
